# argus

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/argus-anomaly/: Cargo.toml
crates/argus-anomaly/examples/: detect.rs
crates/argus-anomaly/src/: anomaly.rs  correlate.rs  cusum.rs  detector.rs  ewma.rs  holt_winters.rs  lib.rs  mad.rs  stats.rs
crates/argus-core/: Cargo.toml
crates/argus-core/src/: attributes.rs  labels.rs  lib.rs  log.rs  metric.rs  resource.rs  signal.rs  timestamp.rs  trace.rs
crates/argus-demo/: Cargo.toml
crates/argus-demo/src/: color.rs  main.rs  render.rs
crates/argus-ingest/: Cargo.toml
crates/argus-ingest/src/: lib.rs  otlp.rs  rng.rs
crates/argus-ingest/src/demo/: generator.rs  mod.rs  topology.rs
crates/argus-query/: Cargo.toml
crates/argus-query/examples/: query.rs
crates/argus-query/src/: ast.rs  error.rs  executor.rs  function.rs  lexer.rs  lib.rs  parser.rs  plan.rs  token.rs  value.rs
crates/argus-store/: Cargo.toml
crates/argus-store/examples/: ingest.rs
crates/argus-store/src/: bitstream.rs  engine.rs  gorilla.rs  index.rs  lib.rs  logs.rs  metrics.rs  query.rs  series.rs  stats.rs  storage.rs  traces.rs
crates/argusd/: Cargo.toml
crates/argusd/src/: event.rs  feed.rs  main.rs  routes.rs  state.rs
crates/argusd/src/api/: anomalies.rs  logs.rs  mod.rs  otlp.rs  query.rs  services.rs  stats.rs  stream.rs  traces.rs
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx
web/components/: sidebar.tsx
web/lib/: api.ts  format.ts  stream-store.ts  topology.ts  types.ts  use-poll.ts
