[workspace]
resolver = "3"
members = ["crates/argus-core", "crates/argus-ingest"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["Lawand Othman <lwnd@pm.me>"]
repository = "https://github.com/lawandothman/argus"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
