[package]
name = "argus-ingest"
version = "0.1.0"
description = "Telemetry ingest sources for Argus, including the synthetic demo generator."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
opentelemetry-proto = { version = "0.32.0", default-features = false, features = [
    "gen-tonic-messages",
    "with-serde",
    "trace",
] }
prost = "0.14"
serde_json = { workspace = true }

[lints]
workspace = true
