[package]
name = "argus-query"
version = "0.1.0"
description = "A PromQL-lite query engine for Argus: lexer, parser, planner, executor."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
argus-store = { path = "../argus-store" }

[dev-dependencies]
argus-ingest = { path = "../argus-ingest" }

[lints]
workspace = true
